--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,3 +11,10 @@
     text-transform: capitalize;
     transition: all .2s linear;
 }
+
+html {
+    font-size: 62.5%;
+    overflow-x: hidden;
+    scroll-padding-top: 5.5rem;
+    scroll-behavior: smooth;
+}
