Corrige responsivo do header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,13 +136,13 @@ header .icons #menu-bars {
         border-top: .1rem solid rgba(0,0,0,.2);
         border-bottom: .1rem solid rgba(0,0,0,.2);
         padding: 1rem;
-        
     }
 
     header .navbar a {
         display: block;
         padding: 1.5rem;
         margin: 1rem;
+        font-size: 2rem;
         background: #eee;
     }
 
@@ -155,3 +155,4 @@ header .icons #menu-bars {
     }
 
 }
+
