Cria menu hamburger no modo responsivo utilizando JavaScript

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,6 +136,11 @@ header .icons #menu-bars {
         border-top: .1rem solid rgba(0,0,0,.2);
         border-bottom: .1rem solid rgba(0,0,0,.2);
         padding: 1rem;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    header .navbar.active {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     }
 
     header .navbar a {
