--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,10 @@ header .icons #menu-bars {
     padding: 0 1rem;
 }
 
+#search-form.active {
+    top: 0;
+}
+
 #search-form #search-box {
     width: 50rem;
     border-bottom: .1rem solid #fff;
