Deixa formulário de pesquisa responsivo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,6 +202,11 @@ header .icons #menu-bars {
         background: #eee;
     }
 
+    #search-form #search-box {
+        width: 90%;
+        margin: 0 1rem;
+    }
+
 }
 
 @media (max-width: 991px) {
