Cria estrutura HTML para slides e paginação

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,6 +163,7 @@ header .icons #menu-bars {
 }
 
 .home .home-slider .slide  {
+    margin-left: 7rem;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
