--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -236,6 +236,10 @@ header .icons #menu-bars {
         padding: 1rem 2rem;
     }
 
+    section {
+        padding: 2rem;
+    }
+
 }
 
 @media (max-width: 768px) {
@@ -269,6 +273,10 @@ header .icons #menu-bars {
     #search-form #search-box {
         width: 90%;
         margin: 0 1rem;
+    }
+
+    .home .home-slider .slide .content h3 {
+        font-size: 5rem;
     }
 
 }
